--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h5,
 h6 {
   padding:0;
   margin:0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .clear-fix {
@@ -22,11 +22,12 @@ h6 {
 .work-entry,
 .project-entry {
   padding: 0 5%;
+  
 }
 
 h1 {
   font-size: 40px;
-  color: #f5a623;
+  color: Yellow;
   line-height: 48px;
   display: inline;
 }
@@ -49,7 +50,7 @@ h3 {
 h4 {
   font-weight: bold;
   font-size: 14px;
-  color: #4a4a4a;
+  color: White;
   line-height: 17px;
 }
 
@@ -100,16 +101,16 @@ a {
 }
 
 #skills-h3 {
-  color: #f5ae23;
+  color: Yellow;
   display: none;
 }
 
 .orange {
-  background-color: #f5ae23;
+  background-color: Yellow;
 }
 
 .orange-text {
-  color: #f5ae23;
+  color: Yellow;
 }
 
 .white-text {
@@ -129,7 +130,7 @@ a {
 
 /* TODO: Replace with image later */
 #header {
-  background-color: #484848;
+  background-color: Black;
 }
 
 .flex-box {
@@ -154,6 +155,7 @@ ul {
   padding: 10px;
   width: 200px;
   display: none;
+  
 }
 
 img {
@@ -211,4 +213,12 @@ span {
   .biopic {
     display: block;
   }
+}
+.role{
+  color:White;
+}
+.proj {
+  box-shadow: 1px 1px 2px gray;
+  margin-bottom:5px;
+  
 }
