--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,7 @@ span {
 
 #lets-connect {
   text-align: center;
+  
 }
 
 /* Media queries to handle various device widths */
@@ -222,3 +223,7 @@ span {
   margin-bottom:5px;
   
 }
+.connect{
+  color:Black;
+}
+
